--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/arianaw15/Burgerlicious/issues"
   },
-  "homepage": "https://github.com/arianaw15/Burgerlicious#readme",
+  "homepage": "https://github.com/arianaw15/Burgerlicious",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
