--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "homepage": "https://github.com/arianaw15/Burgerlicious/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
