added git hub repository

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "predeploy":"npm run build",
     "deploy": "gh-pages -d build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arianaw15/Burgerlicious.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
