--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-handlebars": "^5.2.1",
     "gh-pages": "^3.2.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
